Fixed small things for improved readability, like adding placeholder text to searchbar

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    margin: 1rem auto 1rem auto;
+    margin: auto;
     position: absolute;
     border-radius: 9px;
     width: 30rem;
@@ -131,6 +131,7 @@
     margin-bottom: 3rem;
     display: flex;
     align-items: center;
+    gap: 0.25rem;
     border: 1px solid black;
     border-radius: 999999px;
   }
